# cpp-project-template-bing

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/cli/: CMakeLists.txt  main.cpp
apps/viewer/: CMakeLists.txt  main.cpp
cmake/: ConfigWarnings.cmake  FetchSpdlog.cmake  PlatformDetect.cmake
docs/: coding_style.md  commet_style.md
src/: CMakeLists.txt
src/api/: log.cpp  test.cpp
src/include/api/api/: log.h  test.h
src/include/infra/infra/: logger.h
src/infra/: logger.cpp
